# upt-macports

./: .coveragerc  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  setup.cfg  tox.ini
.github/workflows/: main.yml
upt_macports/: portfile_updater.py  spdx2macports.json  upt_macports.py
upt_macports/templates/: base.Portfile  hackage.Portfile  npm.Portfile  perl.Portfile  python.Portfile  ruby.Portfile
upt_macports/tests/: test_hackage_package.py  test_macports_backend.py  test_macports_package.py  test_perl_package.py  test_portfile_updater.py  test_python_package.py  test_ruby_package.py
