[metadata]
name = upt-macports
version = 0.1
description = MacPorts backend for upt.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mojca Miklavec
author_email = mojca@macports.org
url= https://framagit.org/upt/upt-macports
python_requires = >= 3.6
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    requests
    upt
    jinja2
    packaging
include_package_data = true

[options.entry_points]
upt.backends =
    macports = upt_macports.upt_macports:MacPortsBackend

[options.extras_require]
test =
    requests-mock
